--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "email": "artem@sapegin.me",
     "url": "http://sapegin.me"
   },
-  "version": "2.0.0a",
+  "version": "2.0.1",
   "repository": {
     "type": "git",
     "url": "git@github.com:sapegin/sweet.git"
